--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
 
   <body>
     <!-- navigation code here -->
-
+    <nav>
+      <div class="container">
+        <h1 class="logo">SpaceWalkers</h1>
+        <a href="">Home</a>
+        <a href="">About Us</a>
+        <a href="">Blog</a>
+        <a href="">Contact</a>
+        <a href="">Sign In</a>
+      </div>
+    </nav>
+    <!-- end navigation code -->
     <div class="container home">
       <header class="intro">
         <!-- image code here -->
-
+        <img src="img/main-header.png" alt="" srcset="" />
         <h2>Lift Off</h2>
 
         <p>
