--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <nav>
       <div class="container">
         <h1 class="logo">SpaceWalkers</h1>
-        <a href="">Home</a>
+        <a href="index.html">Home</a>
         <a href="">About Us</a>
         <a href="">Blog</a>
-        <a href="">Contact</a>
+        <a href="contact.html">Contact</a>
         <a href="">Sign In</a>
       </div>
     </nav>
